<resources>
    <string name="app_name">My Curriculum</string>
    <string name="title_activity_login">Login</string>

    <string name="username_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="firstname_hint">Enter First Name</string>
    <string name="lastname_hint">Enter Last Name</string>
    <string name="login_btn_title">Log In</string>
    <string name="create_account_btn_title">Create New Account</string>
    <string name="signup_btn_title">Sign Up</string>
    <string name="linkedin">LinkedIn</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="gmail">Gmail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myContact">My Contacts</string>
    <string name="aboutMeTitle">About Me</string>
    <string name="aboutMeDescription">Technically astute programmer with extensive experience playing a key role on elite technical teams deploying and upgrading legacy software. Hands-on skill in developing robust, reliable code using Java, JavaScript, and MySQL. Talent for translating client requirements into technical specifications and collaborating with diverse cross-functional and technical teams. Skilled in Spring, Hibernate, Angular JS, and restful services.</string>


    <string name="educationTitle">Education</string>
    <string name="educationSubtitle">My College</string>
    <string name="maharishi">Maharishi International University</string>
    <string name="maharishiDegree">Master\'s Computer Science</string>

    <string name="mit">Massachusetts Institute of Technology</string>
    <string name="mitDegree">Bachelor\'s Computer Science</string>

    <string name="certificationTitle">Certifications</string>
    <string name="microsoftTitle">Microsoft Fundamentals 2020</string>
    <string name="oracleTitle">Oracle Fundamentals 2020</string>

    <string name="workTitle">Work Experience</string>
    <string name="userJobTitle">Software Developer</string>
    <string name="careerNote">Career Note</string>
    <string name="careerNoteDescription">Completed on-campus studies and currently taking distance education courses to complete a Master\'s Degree in Computer Science (Available for full-time, W-2 employment).</string>
</resources>